# Vulkan-Minecraft-Clone

./: .gitignore  CMakeLists.txt  README.md  Vulkan-Minecraft-Clone.sln
.github/workflows/: cmake-multi-platform.yml
Vulkan-Minecraft-Clone/: Vulkan-Minecraft-Clone.vcxproj  Vulkan-Minecraft-Clone.vcxproj.filters
Vulkan-Minecraft-Clone/src/: .clang-format  block.cpp  block.hpp  chunk.cpp  chunk.hpp  game.cpp  game.hpp  global.hpp  main.cpp  noise.cpp  noise.hpp  player.cpp  player.hpp  utility.cpp  world.cpp  world.hpp
Vulkan-Minecraft-Clone/src/engine/: camera.cpp  camera.hpp
Vulkan-Minecraft-Clone/src/engine/physics/: collision-handler.cpp  collision-handler.hpp
Vulkan-Minecraft-Clone/src/engine/physics/ray/: ray.cpp  ray.hpp
Vulkan-Minecraft-Clone/src/engine/physics/shapes/: aabb.cpp  aabb.hpp  box.cpp  box.hpp  shape.cpp  shape.hpp
Vulkan-Minecraft-Clone/src/engine/renderer/: buffer.cpp  buffer.hpp  device.cpp  device.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
Vulkan-Minecraft-Clone/src/engine/usage/: glm-usage.hpp
Vulkan-Minecraft-Clone/src/old/: noise.cpp  noise.hpp
Vulkan-Minecraft-Clone/src/shaders/: shader_block.frag  shader_block.vert  tutorial_shader.vert
Vulkan-Minecraft-Clone/src/shaders/compiler/: compile.bat
assets/shaders/: shader_block.vert
assets/shaders/compiler/: compile.bat
shaders/: tutorial_shader.frag
src/: .clang-format  block.hpp  chunk.cpp  chunk.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp  utility.cpp  utility.hpp  world.cpp  world.hpp
src/engine/: camera.cpp  camera.hpp  event-handler.hpp  frustum.cpp  frustum.hpp  window.cpp  window.hpp
src/engine/physics/: collision-handler.cpp  collision-handler.hpp  geometry.hpp
src/engine/physics/ray/: ray.hpp
src/engine/physics/shapes/: aabb.cpp  plane.cpp  plane.hpp  shape.hpp
src/engine/renderer/: buffer.cpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/engine/usage/: glm-usage.hpp
